# MNIST

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
mnist_pkg/: cnn_model.py  constants.py  data_loader.py  generate_images.py  mnist.py  train_model.py  utils.py
src/mnist_pkg/: cnn_model.py  constants.py  data_loader.py  draw_digit.py  generate_images.py  train_model.py  utils.py
src/tests/: test_data_loader.py  test_model.py  test_training.py
tests/: test_model.py  test_training.py
